tests/errors/break_outside_loop.py
# expect_error: SyntaxError
break